add user to paths
